--- a/package.json
+++ b/package.json
@@ -1,15 +1,37 @@
 {
   "name": "vue-datetime-picker-input",
+  "description": "VueJS DateTime picker input with handy props",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": {
+    "name": "Canberk BEREN",
+    "email": "highpriv@gmail.com"
+  },
+  "repository": "https://github.com/highpriv/vue-datetime-picker-input",
+  "bugs": "https://github.com/highpriv/vue-datetime-picker-input/issues",
+  "keywords": [
+    "vue",
+    "date",
+    "time",
+    "input",
+    "date time",
+    "date time input"
+  ],
+  "license": "MIT",
+  "main": ".dist/vue-datetime-picker-input.common.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-library": "vue-cli-service build --target lib --name vue-datetime-picker-input ./src/install.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-imask": "^6.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
